--- a/config.yml
+++ b/config.yml
@@ -2,7 +2,7 @@ address: smtp.163.com:25
 auth:
   host: smtp.163.com
   username: alco89963@163.com
-  password: VBARJVXGVBJYBLJR
+  password: 
 verify:
   type: token #token/code
 template:
